<resources>
    <string name="app_name">ecommerce</string>
    <!-- TODO: Menu string -->
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_in_ecommerce">Search in ecommerce</string>
    <string name="technical_specifications">Technical Specifications</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="price_chart">Price chart</string>
    <string name="product_comparison">Product comparison</string>
    <string name="share">Share</string>
    <string name="by_entering_ecommerce_you_accept_our_terms">By entering ecommerce, you accept our terms</string>
    <string name="enter_to_ecommerce">Enter to ecommerce</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="register_to_ecommerce">register to ecommerce</string>
    <string name="your_account">your account</string>
    <string name="favorite_list">favorite list</string>
    <string name="comment_list">comment list</string>
    <string name="address_list">address list</string>
    <string name="information">information</string>
    <string name="category_list">Category list</string>
    <string name="basket_summary">Basket Summary</string>
    <string name="list_of_goods">List of goods</string>
    <string name="discount">discount</string>
    <string name="total">total</string>
    <string name="zero">0</string>
</resources>